--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "react-native": "0.81.4",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "^0.21.0"
+    "react-native-uuid": "^2.0.3",
+    "react-native-web": "^0.21.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
     "@types/react-native": "^0.72.8",
+    "@types/uuid": "^10.0.0",
     "typescript": "~5.9.2"
   },
   "private": true
